--- a/testing-natasha.ipynb
+++ b/testing-natasha.ipynb
@@ -1098,7 +1098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "id": "e736cdfa-d868-4036-97fb-e4d1dde06d42",
    "metadata": {},
    "outputs": [],
@@ -1110,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "id": "50bd090e-2aad-44fb-a245-c9473db217a4",
    "metadata": {},
    "outputs": [
@@ -1484,7 +1484,7 @@
        "[25840 rows x 26 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1495,7 +1495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "id": "dacbc1ce-a85c-4afe-9453-00afcf40f750",
    "metadata": {},
    "outputs": [],
@@ -1505,7 +1505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "id": "321207b3-4119-428d-a204-794706b621e6",
    "metadata": {},
    "outputs": [
@@ -1867,7 +1867,7 @@
        "[25840 rows x 20 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1878,7 +1878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "id": "b330b2b0-37a7-4d2c-b572-20c1804677fb",
    "metadata": {},
    "outputs": [],
@@ -1896,7 +1896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "id": "8674074a-d054-42d0-9f1d-7f523a5e59ca",
    "metadata": {},
    "outputs": [
@@ -2258,7 +2258,7 @@
        "[25840 rows x 20 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2270,7 +2270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "id": "13146179-1b52-4e15-8965-e2665365ceaa",
    "metadata": {},
    "outputs": [
@@ -2583,7 +2583,7 @@
        "[25840 rows x 17 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2595,7 +2595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "id": "c9d32fe5-0964-4c6e-abac-b5703c6ed9fa",
    "metadata": {},
    "outputs": [
@@ -2908,7 +2908,7 @@
        "[1082 rows x 17 columns]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2920,9 +2920,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "3cfa81f6-d1e2-40cc-9e11-702fe26015b0",
+   "execution_count": 15,
+   "id": "804eda9a-36cd-44c4-aa0d-27fae68bbeed",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "firstPlaceCounts = driverStandings.groupby(by=['driverRef', 'positionOrder'])\n",
+    "newCounts = firstPlaceCounts.size()\n",
+    "newCounts.to_csv('first_place_counts.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "3cfa81f6-d1e2-40cc-9e11-702fe26015b0",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "driverStandings.to_csv('first_place_instances.csv')"
@@ -2930,7 +2944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 17,
    "id": "a5422612-8b06-48e1-a441-09bada1ce93f",
    "metadata": {},
    "outputs": [],
@@ -2940,7 +2954,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 18,
    "id": "b20c93be-c849-4322-b711-69e2fb11768d",
    "metadata": {},
    "outputs": [],
@@ -2950,7 +2964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 19,
    "id": "d9cff4a9-b8be-4dc4-8b07-82b18c1f65f5",
    "metadata": {},
    "outputs": [],
@@ -2960,12 +2974,412 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 20,
+   "id": "e9cf968a-3c4a-4b19-9536-ad1d549d0599",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "driverYearsCounts = driverYearsCounts.to_frame()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "e43a6c4e-22d8-4c7a-bd57-7322166a4457",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.frame.DataFrame"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(driverYearsCounts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "b854b454-5126-4178-b6af-79ada95e9057",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>driverRef</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Cannoc</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Changy</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>abate</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>abecassis</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>acheson</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>zapico</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>zhou</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>zonta</th>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>zorzi</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>zunino</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>855 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           0\n",
+       "driverRef   \n",
+       "Cannoc     1\n",
+       "Changy     1\n",
+       "abate      2\n",
+       "abecassis  2\n",
+       "acheson    2\n",
+       "...       ..\n",
+       "zapico     1\n",
+       "zhou       1\n",
+       "zonta      5\n",
+       "zorzi      3\n",
+       "zunino     3\n",
+       "\n",
+       "[855 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "driverYearsCounts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "ff70bd75-ea22-48a2-832e-ef470d878ab7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "driverYearsCounts = driverYearsCounts.rename(columns={'0': 'yearCount'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "05ccbc80-0829-4eb2-bc0e-cdb63a205477",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>driverRef</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Cannoc</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Changy</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>abate</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>abecassis</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>acheson</th>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>zapico</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>zhou</th>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>zonta</th>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>zorzi</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>zunino</th>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>855 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           0\n",
+       "driverRef   \n",
+       "Cannoc     1\n",
+       "Changy     1\n",
+       "abate      2\n",
+       "abecassis  2\n",
+       "acheson    2\n",
+       "...       ..\n",
+       "zapico     1\n",
+       "zhou       1\n",
+       "zonta      5\n",
+       "zorzi      3\n",
+       "zunino     3\n",
+       "\n",
+       "[855 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "driverYearsCounts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "04a5a308-c1f8-444d-8a39-11be71ae248b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# final = results.merge(drivers[['driverId', 'driverRef', 'forename', 'surname', 'nationality']], how='left', on='driverId')\n",
+    "counts = newCounts.to_frame()\n",
+    "yearsWins = counts.merge(driverYearsCounts, how='left', on='driverRef')\n",
+    "yearsWins.columns = ['wins', 'years']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "fb93deaa-5102-4810-ad6a-39c75ffc363c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>wins</th>\n",
+       "      <th>years</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>driverRef</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>alboreto</th>\n",
+       "      <td>5</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>alesi</th>\n",
+       "      <td>1</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>alonso</th>\n",
+       "      <td>32</td>\n",
+       "      <td>19</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>angelis</th>\n",
+       "      <td>2</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>arnoux</th>\n",
+       "      <td>7</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>vukovich</th>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>wallard</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ward</th>\n",
+       "      <td>1</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>watson</th>\n",
+       "      <td>5</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>webber</th>\n",
+       "      <td>9</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>113 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           wins  years\n",
+       "driverRef             \n",
+       "alboreto      5     14\n",
+       "alesi         1     13\n",
+       "alonso       32     19\n",
+       "angelis       2      8\n",
+       "arnoux        7     12\n",
+       "...         ...    ...\n",
+       "vukovich      2      5\n",
+       "wallard       1      2\n",
+       "ward          1     11\n",
+       "watson        5     12\n",
+       "webber        9     12\n",
+       "\n",
+       "[113 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "yearsWins"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "id": "b91d6bbc-3182-444d-83d6-6414958329b6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "driverYearsCounts.to_csv('driver_year_counts.csv')"
+    "yearsWins.to_csv('wins_and_years.csv')"
    ]
   },
   {
